--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div id="footer" class="container" style="background:blue;">footer</div>
-        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script>
